<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="OkBtnClick"
    tools:context=".StudentsGroupActivity">

    <CheckBox
        android:id="@+id/privilege_flg"
        android:layout_width="239dp"
        android:layout_height="45dp"
        android:text="Наявність бюджетників"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        tools:layout_editor_absoluteY="514dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="139dp"
        android:layout_height="79dp"
        android:text="@string/additional_flg_txt"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4"
        tools:layout_editor_absoluteY="464dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/edu_level_txt"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facultyEdit"
        app:layout_constraintWidth_percent="0.4" />

    <EditText
        android:id="@+id/facultyEdit"
        android:layout_width="386dp"
        android:layout_height="49dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintEnd_toEndOf="@+id/txtGrpNumber"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:text="@string/faculty_txt"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="@+id/img"
        app:layout_constraintTop_toBottomOf="@+id/img"
        app:layout_constraintWidth_percent="0.4" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="394dp"
        android:layout_height="193dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:barrierMargin="@dimen/default_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/Group" />

    <TextView
        android:id="@+id/txtimgGrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="Група"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img" />

    <TextView
        android:id="@+id/txtimgFacult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/faculty_txt"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/img"
        app:layout_constraintEnd_toEndOf="@+id/img" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/grp_number_txt"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="@+id/img"
        app:layout_constraintTop_toBottomOf="@+id/img"
        app:layout_constraintWidth_percent="0.4" />

    <EditText
        android:id="@+id/txtGrpNumber"
        android:layout_width="252dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.54"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="149dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edu_level_bachelor_txt" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edu_level_master_txt" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/contract_flg"
        android:layout_width="239dp"
        android:layout_height="45dp"
        android:text="Наявність контрактників"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        tools:layout_editor_absoluteY="464dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        android:layout_width="125dp"
        android:layout_height="74dp"
        android:text="ОК"
        android:textSize="@dimen/default_text_size"
        tools:layout_editor_absoluteX="276dp"
        tools:layout_editor_absoluteY="576dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnStudList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBtnStudListClick"
        android:text="Список студентів"
        app:layout_constraintTop_toBottomOf="@+id/privilege_flg"
        tools:layout_editor_absoluteX="23dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnRem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="Delete"
        android:onClick="onDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStudList" />

</androidx.constraintlayout.widget.ConstraintLayout>